@@ -10,6 +10,7 @@ Changelog v1.4.1 to v1.5.0
 -Fix Effect Rotate90 for non square output
 -Fix Effect BeatHorizShift for exotic resolutions
 -Fix Effect Rotozoom for exotic resolutions
+-Fix Effect Texture deform for exotic resolutions
 -Fix Mixer Checkbox for exotic resolutions
 -Fix PixConCli JMX Query  
 -Cleanup GUI, make grouping of controls more strict
